corect date in summary api
Former-commit-id: 0ec5ad01a0e94ceabd5e691455e91beb364a7a5f [formerly 9aa436546bce27499ae27b71f3d9672e3acc8ecd] [formerly cdf043d30850420c61b2746290a57913a8efa471 [formerly 845bf315471723389397aa4fc826f79275ae0ae0]]
Former-commit-id: bd79d597816b0aeeadd5b0c89100e3fc1d8682c8 [formerly 9a5c7847216e5bb1a5cd1d68bddfda2e581c2577]
Former-commit-id: a224bbebf08aa5962dba6d91bbd22a8c65ef8d59

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -1250,24 +1250,25 @@
                                                       <br>
                                                     </div>
                                                   </div>
- <div class="news-blocks blank-card blank-card-yellow newsCard">
-                        <h3>{{ _('Custom Fields')}}</h3>
-                        <ul class="list-unstyled contact-infos">
-                          <li ng-show="showCustomFieldForm">
-                            <div class="row">
-                              <form class="form-inline newLeadForm" role="form">
-                                <div class="form-group sm-group" style="">
-                                  <label class="sr-only" for="exampleInputEmail2">{{ _('Field')}}</label>
-                                  <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.field" placeholder="{{ _('Enter field name')}}">
-                                </div>
-                                <div class="form-group sm-group" style="">
-                                  <label class="sr-only" for="exampleInputEmail2">{{ _('Value')}}</label>
-                                  <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.value" placeholder="{{ _('Enter a value')}}">
-                                </div>
-                                <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="addCustomField(customfield)">{{ _('Add')}}</button>
-                                <button type="submit" class="btn btn-default" ng-click="showCustomFieldForm=false">X</button>
-                              </form>
-                            </div>                                                      </li>
+                                                  <div class="news-blocks blank-card blank-card-bluep">
+                                                    <h3>{{ _('Custom Fields') }}</h3>
+                                                    <ul class="list-unstyled contact-infos" >
+                                                      <li ng-show="showCustomFieldForm">
+                                                        <div class="row">
+                                                          <form class="form-inline newLeadForm" role="form">
+                                                            <div class="form-group sm-group" style="">
+                                                              <label class="sr-only" for="exampleInputEmail2">Field</label>
+                                                              <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.field" placeholder="Enter field name">
+                                                            </div>
+                                                            <div class="form-group sm-group" style="">
+                                                              <label class="sr-only" for="exampleInputEmail2">Value</label>
+                                                              <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.value" placeholder="Enter a value">
+                                                            </div>
+                                                            <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(customfield,customfields)">Add</button>
+                                                            <button type="submit" class="btn btn-default" ng-click="showCustomFieldForm=false">X</button>
+                                                          </form>
+                                                        </div>
+                                                      </li>
                                                       <li ng-repeat="custom in customfields">
                                                         <span>
                                                           <%= custom.field%>  : <%= custom.value%>
