--- a/templates/base.html
+++ b/templates/base.html
@@ -441,13 +441,13 @@
 
 
 
-  //var ROOT = '/_ah/api';
+  var ROOT = '/_ah/api';
 
 
 
 
 
-     var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+     // var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
