--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -120,17 +120,28 @@
               <div class="row">
                 <div class="col-md-12">
                   <hr class="sm-hr">
-                  <div class="tags-section hidden" ng-class="{hidden: contact.tags==null}">
-                    <div class="section-content">
-                      <span class="pull-left">{{ _('Tags:')}} </span>
-                       <!-- ngRepeat: tag in account.tags -->
-                      <a ng-repeat="tag in contact.tags" href="/#/search/type:Contact tags:<%=tag.id%>">
-                        <span class="pull-left task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">
-                          <%= tag.name %>
-                        </span>
-                      </a>
+                  <div class="relatedTags tags-section" ng-class="{hidden: contact.tags == null}">
+                        <div class="section-content">
+                            <span class="pull-left"><i class="fa fa-tags"></i>{{_('Tags')}}: </span>
+                            <!-- ngRepeat: tag in account.tags -->
+                            <div ng-repeat="tag in contact.tags">
+                                <span class="pull-left task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">
+                                    <a href="" ng-click="removeTag(tag,$index)" class="removeRelatedTag select2-search-choice-close" ></a>
+                                    <%= tag.name %>
+                                </span>
+                            </div>
+                           <a href="" ng-hide="showNewTag" ng-click="showNewTag=true" style="margin-left:10px"> +Add new tag</a>
+                           <form ng-show="showNewTag" class="newTagFormShow">
+                                <select id="select2_sample2" class="selectTagInput form-control select2" multiple>
+                                  <option ng-repeat="tag in tags"
+                                  value='<%=tag.entityKey%>'>
+                                    <%=tag.name%>
+                                  </option>
+                                </select>
+                                <button type="submit"  ng-click="addTagsTothis();showNewTag=false" class="btn blue jfk-button btn-sm jfk-button-action">{{_('Add')}}</button>
+                            </form>
+                        </div>
                     </div>
-                  </div>
                 </div>
               </div>
             </div>
