fixing results page design bugs
Former-commit-id: e163f7d1af476fdc13432e62fa5de19861620901 [formerly ac886c63e6d345000c81f1bf8d0a0368d9e5fa6d] [formerly 7e403a856861c0b6280931bf6c01efc4c1ef09ed [formerly 9d08c4b3a8f3fc73b17407170ae0d435a8cce8d5]]
Former-commit-id: 4d03e53ab9200e8403b21485a789281e2d2779a5 [formerly 69bfa96995fdcc5d06676fb07eea589e65417154]
Former-commit-id: 46933da03f03461447027741a626fa001df667ff

--- a/templates/search/list.html
+++ b/templates/search/list.html
@@ -105,28 +105,27 @@
             
             <div class="row cards-container">
             <div class="col-md-12">
-            <div class="inner-cards-container">
+            <div class="waterfall inner-cards-container resultsContainer">
             
-              <div ng-repeat="result in searchResults" class="col-md-3 responsive" data-tablet="span6" data-desktop="span3">
-                <div class="dashboard-stat cards-small">
+              <div ng-repeat="result in searchResults" class="cardElement" data-tablet="span6" data-desktop="span3">
+                <div class="eleContainer">
                   
                   <div class="details">
                     <a href="<%=result.url%>">
-                    <p class="card-small-title" >
+                    <p class="title" >
                       <%= result.title %>
                     </p></a>
                     <div class="desc">                           
                       
-                       <p>(<%=result.type%>)</p>
+                       <p class="pull-right">(<%=result.type%>)</p>
                     </div>
-                  </div>
-                  <a class="more" href="<%=result.url%>">
-                  {{_('View more')}} <i class="m-icon-swapright m-icon-white"></i>
-                  </a>                 
+                  </div>           
                 </div>
               </div>
 
-               <div ng-show="!searchResults" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+              <div class="clearfix"></div>
+              </div>
+             <div ng-show="!searchResults" class=" noResult col-md-12 responsive" data-tablet="span6" data-desktop="span12">
 
                 <div class="dashboard-stat cards">
                   
@@ -139,9 +138,6 @@
                
                                   
                 </div>
-              </div>
-
-              <div class="clearfix"></div>
               </div>
 
               </div>
@@ -168,3 +164,10 @@
       </div>
       <!-- END PAGE CONTAINER--> 
 </div>
+<script type="text/javascript">
+  $('.waterfall').waterfall({
+        colMinWidth: 200,
+        defaultContainerWidth: 800,
+        autoresize: true
+    });
+</script>
