Css Bug on Account New, also we can't add a picture on account new, contact new, lead new Fix #782
Former-commit-id: 20356a7f5b201b5e80293bce540498e692667903 [formerly 1434bacfe87a75100fb4c2b781c155a698385cc0] [formerly 09eaeec1d42d6129521e52d64280e9e1d823f5f4 [formerly 468e6f9b7e5f715cccd23a210b217390bb080b40]]
Former-commit-id: 91766cd5d40cb796bb71ead148c16966bc8b3cdb [formerly 11e376bee45d56da81526f82b2461df3ab373a6f]
Former-commit-id: 96cac5c7b3bb1f42a2449174b136ad8bea25834c

--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -69,7 +69,7 @@
                         <div class="portlet-body left-sidebar" id="chats">
                           <div class="pic">
                               <img alt="<%=account.name%>" ng-src="<%=imageSrc%>" class="img-responsive img-thumbnail">
-                              <a ng-click="createPickerUploader()" href="" class="btn btn-default btn-upload btn-upload-account" data-toggle="modal">
+                              <a ng-click="createPickerUploader()" href="" class="btn-upload btn-upload-account" data-toggle="modal">
                                 <img src="/static/img/upload_logo.png" >
                               </a>
                          </div>
