--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -49,7 +49,7 @@
                 <div class="portlet-body left-sidebar" id="chats">
                   <div class="pic">
                     <img alt="<%=lead.firstname%> <%=lead.lastname%>" ng-src="<%=imageSrc%>" class="img-responsive  profile-photo-large">
-                    <a ng-click="createPickerUploader()" href="" class="btn btn-default btn-upload btn-upload-contact" data-toggle="modal">
+                    <a ng-click="createPickerUploader()" href="" class="btn-upload btn-upload-contact" data-toggle="modal">
                           <img src="/static/img/upload_logo.png" class="" >
                       </a>
                       <div  class="responsivePhotoIcon"></div>
