--- a/templates/base.html
+++ b/templates/base.html
@@ -445,14 +445,7 @@
 
 
 
-    var ROOT = '/_ah/api';
-
-
-
-
-
-
-     // var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+    // var ROOT = '/_ah/api';
 
 
 
@@ -460,6 +453,12 @@
 
 
      var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+
+
+
+
+
+
 
 
 
