--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -39,14 +39,16 @@
           </div>
         <span role="button" class="filterItem hiddenOnPhone hiddenOnmd"  ng-class="{activeFilter: selectedOption =='tags'}" ng-click="showTagFilterCard();selectedOption ='tags'"><i class="fa fa-tags"></i><span class="hidden-xs hiddenOnxs">{{_('Filter by')}} </span> {{_('Tags')}}</span>
       </div>
+     
       </div>
 
       </div>
+        
     </div>
     </div>
 </div>
 <div  class="page-content">
-  <div class="loader-container row" ng-show="isLoading">
+  <div class="loader-container row" ng-show="isLoadingtweets">
     <div class="loader-dialog col-md-4 col-md-offset-4 ">
       <div class="loader-content">
           {{ _('Loading...')}}
@@ -73,6 +75,24 @@
 
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
+        <div class="row subHeaderContainer">
+   <div class=" col-md-9 col-sm-9 col-xs-9 subHeaderContent">
+      <div class="row">
+          <h2 class="page-title">{{ _("Discovery") }} </h2>
+     </div>
+  </div>
+  <div class="col-md-3 col-sm-3 col-xs-3">
+      <div class="row">
+        <div class="pull-right" >
+         <a href="/#/discovers/new" class="btn red newBtn">
+                       {{_('New Topic')}}
+         </a>
+      </div>
+      </div>
+  </div>
+</div>
+
+
     <div class="row">
 
     <div class="col-md-12">
