desplaying  collaborators from records in leads
Former-commit-id: fcab3df50a3c171bb726ae6c324ea8092c72e390 [formerly 8cd6facd61b84652977f484261151f660bf51675] [formerly 7e08d3ef9d513990662ca25c31cb6548815d8b04 [formerly c8cc7580fda2dab46f8bdb908e8f0ff5765108ed]]
Former-commit-id: ad6924a04b08725f8ed5f663e57075ea0ee71f56 [formerly f9a078f3c5c8377b99e91c804b0df944ea04d967]
Former-commit-id: 65cbec8d0fafac0d26efe4102d0abe300577d0a7

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -1584,11 +1584,11 @@
                     <div class="radio-list">
 
                         <label >
-                            <input type="radio" name="optionRadio" value="public" ng-model="lead.access" />
+                            <input type="radio" name="optionRadio" value="public" ng-model="lead.access" ng-click="share();"/>
                             {{ _("public: Anyone within your organization can access and find")}}
                         </label>
                         <label >
-                            <input type="radio" name="optionRadio"  value="private" ng-model="lead.access" />
+                            <input type="radio" name="optionRadio"  value="private" ng-model="lead.access" ng-click="share();"/>
                             {{ _("private: only you and your collaborators")}}
                         </label>
                     </div>
@@ -1620,7 +1620,7 @@
             </div>
             <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit"  ng-click="share(slected_memeber)"  class="btn blue addContactNow">{{_("Share")}}</button>
+                <button  type="submit"  ng-click="share()" data-dismiss="modal" aria-hidden="true" class="btn blue addContactNow">{{_("Share")}}</button>
             </div>
             </form>
         </div>
