--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -155,15 +155,15 @@
           <div class="detailsSection">
             <div class="head">
               <div class="pic">
-                <a href="/#/leads/show/<%= lead.id %>" class="startup-link" title="account.name">
+                <a href="http://twitter.com/<%= tweet.screen_name %>" class="startup-link" title="account.name">
                 
-                <img alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive profile-photo" src="<%=tweet.profile_image_url %>">
+                <img href="http://twitter.com/<%= tweet.screen_name %>" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive profile-photo" src="<%=tweet.profile_image_url %>">
                 </a>
               </div>
               <div class="text">
                <!-- <button type="button" class="close deleteLeadBtn" ng-show="showClose" ng-click="editbeforedelete(lead)"></button>-->
                 <div class="name">
-                  <a href="/#/leads/show/<%= lead.id %>" class="profile-link">
+                  <a href="http://twitter.com/<%= tweet.screen_name %>" class="profile-link">
                     <%= tweet.author_name %>
                   </a>
                 </div>
