--- a/templates/base.html
+++ b/templates/base.html
@@ -487,7 +487,7 @@
   </script>
   
 
-  <script src="/static/app/scripts/vendor/static_scripts.js" ></script>
+  <script src="http://storage.googleapis.com/iogrow-cdn/static_scripts.js" ></script>
   <script src="/static/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
    <script src="/static/plugins/fullcalendar/lang-all.js" type="text/javascript"></script>
   <script src="/static/plugins/fullcalendar/gcal.js" type="text/javascript"></script>
