add link to tweets in discovery page fix #1020
Former-commit-id: 05546ac6e1337ac97b536fb86a1085184bcefa6c [formerly d3a70e0897df0ffcbd3b4e67dd73ce674e0b4dd0] [formerly c543b38ed589cc65cf4261a9665dcd28daec4da3 [formerly 477a528c9ccd9f9ccec788e8c8a233e7261ca672]]
Former-commit-id: 665519ad086fa70532c03be519bc20b62120e023 [formerly 728b4255504d0a161c27cd3b7bc0aad553ae984d]
Former-commit-id: 3bae2ef2397dca664297250f36a707c99713798d

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -171,9 +171,11 @@
                   <span>
                       <%=fromNow(lead.updated_at)%>
                   </span>
-                  <span class="contact-title" >
+                  <a href="http://twitter.com/<%= tweet.screen_name %>/status/<%= tweet.id %>" >
+                  <span  class="contact-title" >
                     <%= tweet.content %>
                   </span>
+                  </a>
                   <span ng-show="lead.title">
                     <a  class="desc" href="/#/search/type:Lead <%=lead.title%>">
                       #<%=lead.title%>
