Billing stuff, purchase license for org v2
Former-commit-id: 2c878f0651cc396e837c4a33672ef755db4d98e8 [formerly c8772b37762b753aa6e13d5e1e96558a6009de63] [formerly e2373f7c7c87dd0b8dd9c678e4c86defbe4d1d36 [formerly 9a1ad2a416c90da53ae7b6ee58818862af663e97]]
Former-commit-id: 243d4c93c6c3b3c4389874908e6578f265412d62 [formerly fac2945874e01b512a9634d57bceabba1afcfcbb]
Former-commit-id: ae781cb61d020b92f75ea91c9bfe07453888f7ab

--- a/templates/billing/billing_list.html
+++ b/templates/billing/billing_list.html
@@ -25,7 +25,7 @@
 
       
 
-       <%= organizationInfo.organizationNumberOfLicensed %>   {{_('licenses')}}   <%= organizationInfo.organizationNumberOfUser %>  {{_('User')}}
+       <%= organizationInfo.organizationNumberOfLicensed %>    <%= organizationInfo.organizationNumberOfLicense %>  {{_('licenses')}}   <%= organizationInfo.organizationNumberOfUser %>  {{_('User')}}
 
     </div>
   </div>
@@ -143,7 +143,7 @@
     <div class="col-md-3">
          <div class="portlet showPage rightCardContent">
                 <div class="portlet-title line">
-                  <div class="caption"> <i class="fa fa-check"></i>{{ _('Licenses')}} </div>
+                  <div class="caption"> <i class="glyphicon glyphicon-certificate"></i>{{ _('Licenses')}} </div>
 
                 </div>
                 <div class="newContactform portlet-body" id="chats">
@@ -153,7 +153,7 @@
                           <div class="showDescription">
                             <span class="relatedEventTitle">
                                <a href="/#/tasks/show/<%=task.id%>" class="discussion-content">
-                                 <%= task.title%>
+                                 <%= license.purchase_date | date:'dd MMM'%>
                                </a>
                             </span>
                             <a class="pull-right relatedEventMoreBtn">
