--- a/templates/billing/billing_show.html
+++ b/templates/billing/billing_show.html
@@ -67,7 +67,7 @@
                                             <div class="col-md-9">
                                             <div class="pic">
 
-                                            <a href="<%=user.google_public_profile_photo_url%>" class="">
+                                            <a href="/#/admin/users/show/<%= user.google_user_id %>" class="">
                                                 <img alt="<%= user.google_display_name%>" src="<%=user.google_public_profile_photo_url%>" class="img-responsive profile-photo-large-billing-show" >
 
                                                 <span>
